# Anomalous-Field-Recorder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
datasets/: synthetic_1.csv  synthetic_2.csv
docs/configs/: pipeline.yaml  realtime-mqtt.yaml  realtime-sqlite.yaml  realtime-timescale.yaml
docs/experiments/: chemistry-lab.yml  clinical-lab.yml  field-baseline.yml  medical-imaging.yml  neuro-eeg.yml
notebooks/: 01_quickstart.ipynb  02_neuro_bandpower.ipynb  03_neuro_connectivity.ipynb
scripts/: acquire.py  process.py  report.py
src/: __init__.py
src/afr/: __init__.py  alerting.py  cli.py  data_profile.py  export.py  pipeline.py  reporting.py
src/afr/anomaly/: __init__.py  base.py  engine.py
src/afr/anomaly/detectors/: __init__.py  adaptive_threshold.py  autoencoder.py  change_point.py  ensemble.py  matrix_profile.py  spectral_bandpower.py  spectral_kurtosis.py  statistical_zscore.py
src/afr/dashboard/: app.py
src/afr/detection/: __init__.py  machine_learning.py  statistical.py
src/afr/filters/: __init__.py  bandpass.py  base.py  butterworth.py  notch.py  smoothing.py
src/afr/models/: __init__.py  anomaly.py  metadata.py  recording.py
src/afr/registry/plugins/: __init__.py  base.py
src/afr/sensors/: __init__.py  simulated_sensor.py
src/afr/storage/: __init__.py  base.py  sqlite.py  timescale.py
src/afr/streaming/: __init__.py  buffering.py  filters.py  processor.py  service.py  sources.py
src/anomalous_field_recorder/: __init__.py  cli.py  config.py  domains.py  logging_utils.py  pipeline.py  registry.py  reporting.py  service.py  signals.py
tests/: test_cli_commands.py  test_data_profile.py  test_pipeline.py  test_realtime_platform.py  test_service_endpoints.py
