[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anomalous-field-recorder"
version = "0.2.0"
description = "Toolkit for logging and reporting anomalous electromagnetic field measurements"
authors = [{ name = "Field Research Team" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["sensors", "analysis", "anomaly"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
afr = "anomalous_field_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
